re PR tree-optimization/67842 (Incorrect check in sese.h:bb_in_region)

2017-12-14  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/67842
	* sese.h (bb_in_region): Remove #if 0'ed code.

From-SVN: r255636